@@ -91,7 +91,7 @@ If you are interested in working on any of these, email bug-texinfo@gnu.org.
   - If node name contains an @ command, complain explicitly.
   - Call Ghostscript to get ASCII/jpg output for the @image command.
   - Better HTML output: allow settable background color, table colors
-    and spacing, <head> meta tags, back link from footnote marker, etc.
+    and spacing, <head> meta tags, etc.
   - Rewrite completely to simplify generation of different formats.
 
 * TeX:
